Modified line number code so that it handles wrapped lines correctly

--- a/less/csedit.less
+++ b/less/csedit.less
@@ -110,6 +110,14 @@ textarea {
 	top: 70px;
 }
 
+#font_test {
+	.code_font();
+	height: auto;
+	position: absolute;
+	visibility: hidden;
+	width: auto;
+}
+
 #results {
 	.source_result_common();
 	.source_wrap_and_result_common();
